{
    "name": "ArchitectureInputActions",
    "maps": [
        {
            "name": "Drawing",
            "id": "225f8ad6-74ba-4da4-9a5c-7879960653a9",
            "actions": [
                {
                    "name": "DrawBegin",
                    "type": "Button",
                    "id": "1fb461b5-4de4-4c11-876f-bbf1e505ae9b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Draw",
                    "type": "Button",
                    "id": "083075a2-a2b0-46e6-b52e-3544985e1e10",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "DrawEnd",
                    "type": "Button",
                    "id": "4a4bcabd-3287-4a09-83e2-05168d2d4b34",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Position",
                    "type": "PassThrough",
                    "id": "aa2a82f9-3873-4c4c-915f-112fae8a73d3",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "5fb2fa56-1759-4561-b745-96b36cd8c73e",
                    "path": "<Pen>/tip",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "DrawBegin",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a30bee44-b658-44e3-aa81-b6d92cda8153",
                    "path": "<Pen>/press",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Draw",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "38923bcf-5209-462a-b9c7-92a1aa5b7510",
                    "path": "<Pen>/press",
                    "interactions": "Press(behavior=1)",
                    "processors": "",
                    "groups": "",
                    "action": "DrawEnd",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f7db42d0-f682-4119-bde0-216abf02df4a",
                    "path": "<Pen>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Position",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Moving",
            "id": "7cd3705f-3a15-448e-8adf-1903a0b553dc",
            "actions": [
                {
                    "name": "Position",
                    "type": "PassThrough",
                    "id": "84c8b9c7-0427-4232-bcb0-1b0d323f6afb",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Pressure",
                    "type": "PassThrough",
                    "id": "f96bf419-1678-48a4-8d06-dc061c41e2c2",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "ButtonPress",
                    "type": "Button",
                    "id": "357b4daf-2ec3-4c0c-8884-3b4c1e4ac551",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "ButtonRelease",
                    "type": "Button",
                    "id": "6d529a4d-f040-4203-b753-9f8d00ba7f2e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "e42dabbe-cf15-4459-bc7c-ad8b660020f6",
                    "path": "<Pen>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Position",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ec49de86-e35a-4d53-92a8-7da18327a72a",
                    "path": "<Pen>/pressure",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pressure",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d60eb8f6-4493-4073-815c-3b16e214c5b9",
                    "path": "<Pen>/barrel1",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "ButtonPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cc14ce03-6e06-476a-859f-157ede4ad09a",
                    "path": "<Pen>/barrel1",
                    "interactions": "Press(behavior=1)",
                    "processors": "",
                    "groups": "",
                    "action": "ButtonRelease",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Selection",
            "id": "ea8be314-d32c-440f-a2cf-40c45645a8c2",
            "actions": [
                {
                    "name": "Select",
                    "type": "Button",
                    "id": "f5963785-da0e-4369-bf93-a3a9819aa590",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Position",
                    "type": "Value",
                    "id": "ad3f50cf-74e6-40aa-9f52-0bf75adc0536",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "698b9049-0393-4c19-9016-c437ea9e153f",
                    "path": "<Pen>/tip",
                    "interactions": "Press(behavior=1)",
                    "processors": "",
                    "groups": "",
                    "action": "Select",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3292cd00-e4bf-4f18-bde0-2a223080394b",
                    "path": "<Pen>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Position",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}